# alpha-hive-deploy

./: .checkpoint_2026-02-25_daily_scan_1772040661211.json  .dockerignore  .env.example  .fuse_hidden0000232400000008  .gh_pages_deploy_log.jsonl  .gitignore  .swarm_results_2026-02-25.json  .swarm_results_2026-02-26.json  .swarm_results_2026-02-28.json  .swarm_results_2026-03-01.json  .swarm_results_2026-03-02.json  .swarm_results_2026-03-03.json  .swarm_results_2026-03-04.json  .swarm_results_2026-03-05.json  .swarm_results_2026-03-06.json  .swarm_results_2026-03-09.json  .swarm_results_2026-03-10.json  Alpha_Hive_v0.12_升级路线图.md  Alpha_Hive_周度产出评审_vs_机构报告_2026W14.md  CHANGELOG.md  CLAUDE.md  CRON_SETUP_GUIDE.md  DEEP_REPORT_CSS.txt  Dockerfile  GMAIL_FALLBACK_SUMMARY.md  MCP_INSTALL_GUIDE.md  MCP_SETUP.md  ML报告_2026-03-10.html  Makefile  NVDA_raw.json  PHASE2_COMPLETION_SUMMARY.md  PHASE2_DELIVERABLES.txt  PHASE2_INTEGRATION_CHECKLIST.md  PHASE2_QUICK_REFERENCE.md  PHASE2_USAGE_GUIDE.md  PHASE3_COMPLETION_SUMMARY.txt  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE3_P1_CODE_EXECUTION_PLAN.md  PHASE3_P2_IMPLEMENTATION_SUMMARY.md  Procfile  (+1344 more)
.claude/: launch.json
.factor_cache/: ff5_daily.parquet  mom_daily.parquet
.risk_cache/: beta_NVDA_SPY.json  beta_NVDA_XLK.json
alpha-hive-web/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
alpha_hive_bot/: .env.example  BOTFATHER_COMMANDS.md  README.md  __init__.py  bot.py  config.py  push_job.py  query_commands.py  requirements.txt  subscriber_db.py
db_snapshots/: README.md  pheromone_v0.23.2_gap_aware_2026-04-17.db
experiments/: neutral_band_replay.py  neutral_band_replay_report.md  penalty_replay.py  penalty_replay_report.md  portfolio_capacity_replay.py  portfolio_capacity_report.md
gui/: __init__.py  animations.py  app.py  interactions.py  monitor.py  views.py
logs/: alpha_hive_structured.jsonl.1  health_2026-04-29.json  health_2026-05-10.json  health_slack_payload_2026-04-29.txt  health_slack_payload_2026-05-10.txt  last_run_status.json
marketing/: 01_即刻_文案.md  02_X_Twitter_文案.md  03_雪球_文案.md  04_Reddit_文案.md  05_发布节奏日历.md
output/: earnings_pc_history.html  ff6_history.html  iv_crush_analysis.html  oi_wall.html
paper_portfolio_state/: closed_trades.jsonl  equity_curve.jsonl  meta.json  positions.jsonl
paper_portfolio_state_backup/: closed_trades.jsonl  equity_curve.jsonl  meta.json  positions.jsonl
prompts/: news_sentiment_analyst.md  options_strategist.md  step1_analysis_engine.md
report_snapshots/: AAPL_2026-04-26.json  AAPL_2026-05-10.json  ADBE_2026-04-26.json  ADBE_2026-05-10.json  AMD_2026-04-26.json  AMD_2026-05-03.json  AMD_2026-05-10.json  AMD_2026-05-17.json  AMGN_2026-04-26.json  AMGN_2026-05-03.json  AMGN_2026-05-10.json  AMGN_2026-05-17.json  AMZN_2026-03-09.json  AMZN_2026-03-10.json  AMZN_2026-03-11.json  AMZN_2026-03-23.json  AMZN_2026-03-30.json  AMZN_2026-04-01.json  AMZN_2026-04-06.json  AMZN_2026-04-07.json  AMZN_2026-04-08.json  AMZN_2026-04-09.json  AMZN_2026-04-10.json  AMZN_2026-04-13.json  AMZN_2026-04-14.json  AMZN_2026-04-15.json  AMZN_2026-04-16.json  AMZN_2026-04-17.json  AMZN_2026-04-20.json  AMZN_2026-04-21.json  AMZN_2026-04-22.json  AMZN_2026-04-23.json  AMZN_2026-04-24.json  AMZN_2026-04-26.json  AMZN_2026-04-27.json  (+632 more)
(+83 files in other folders)
