[project]
name = "alpha-hive"
version = "4.0.0"
description = "Decentralized swarm-intelligence investment research agent cluster"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--timeout=30",
    "-x",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external APIs",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "test_*.py", "setup_*.py", "alpha_hive_app.py"]

[tool.coverage.report]
show_missing = true
fail_under = 40

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long
    "E402",   # module-level import not at top
    "F401",   # unused import
    "F541",   # f-string without placeholders
    "F841",   # unused variable (many in except blocks)
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
    "E741",   # ambiguous variable name
]
