[project]
name = "alpha-hive"
version = "4.0.0"
description = "Decentralized swarm-intelligence investment research agent cluster"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    # v0.33.0: 30→60s。部分非-integration 测试打真实 API 偏慢（dashboard 渲染 42s、
    # options 分析 32s），30s 下限流时确定性超时；60s 实测整套 0 失败（durations 验证）。
    "--timeout=60",
    "-x",
    # v0.33.0: 默认跳过 integration（需真实网络/OAuth 的外部依赖测试，离线必挂）。
    # 跑它们：pytest -m integration（CLI 的 -m 覆盖此处）。
    "-m", "not integration",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external APIs",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "test_*.py", "setup_*.py", "alpha_hive_app.py"]

[tool.coverage.report]
show_missing = true
fail_under = 40

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long
    "E402",   # module-level import not at top
    "F401",   # unused import
    "F541",   # f-string without placeholders
    "F841",   # unused variable (many in except blocks)
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
    "E741",   # ambiguous variable name
]
